added api testing new config value lap_max_lap_time_in_seconds

--- a/web/Gemfile
+++ b/web/Gemfile
@@ -49,7 +49,8 @@ end
 group :development do
   # Access an IRB console on exception pages or by using <%= console %> in views
   gem 'web-console', '~> 2.0'
-
+  gem 'rspec-rails', '~> 3.0'
+  gem 'timecop'
   # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
   gem 'spring'
 end
