--- a/web/Gemfile
+++ b/web/Gemfile
@@ -51,6 +51,7 @@ group :development do
   gem 'web-console', '~> 2.0'
   gem 'rspec-rails', '~> 3.0'
   gem 'timecop'
+  gem 'database_cleaner'
   # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
   gem 'spring'
 end
