--- a/web/Gemfile
+++ b/web/Gemfile
@@ -22,6 +22,7 @@ gem 'carrierwave'
 gem 'actioncable', github: 'rails/actioncable'
 gem 'puma'
 gem 'mini_magick'
+gem 'react-rails', '~> 1.5.0'
 
 # Use jquery as the JavaScript library
 gem 'jquery-rails'
