--- a/web/Gemfile
+++ b/web/Gemfile
@@ -23,6 +23,8 @@ gem 'actioncable', github: 'rails/actioncable'
 gem 'puma'
 gem 'mini_magick'
 gem 'react-rails', '~> 1.5.0'
+gem 'axlsx', '~> 2.0.1'
+gem 'axlsx_rails'
 
 # Use jquery as the JavaScript library
 gem 'jquery-rails'
