--- a/web/Gemfile
+++ b/web/Gemfile
@@ -24,6 +24,7 @@ gem 'react-rails', '~> 1.5.0'
 gem 'axlsx', '~> 2.0.1'
 gem 'axlsx_rails'
 gem 'wicked_pdf'
+gem 'sidekiq'
 
 # Use jquery as the JavaScript library
 gem 'jquery-rails'
