--- a/web/Gemfile
+++ b/web/Gemfile
@@ -25,6 +25,7 @@ gem 'axlsx', '~> 2.0.1'
 gem 'axlsx_rails'
 gem 'wicked_pdf'
 gem 'sidekiq'
+gem 'sinatra', :require => nil
 
 # Use jquery as the JavaScript library
 gem 'jquery-rails'
