--- a/web/Gemfile
+++ b/web/Gemfile
@@ -26,6 +26,7 @@ gem 'axlsx_rails'
 gem 'wicked_pdf'
 gem 'sidekiq'
 gem 'sinatra', :require => nil
+gem 'whenever'
 
 # Use jquery as the JavaScript library
 gem 'jquery-rails'
