--- a/web/Gemfile
+++ b/web/Gemfile
@@ -27,6 +27,7 @@ gem 'wicked_pdf'
 gem 'sidekiq'
 gem 'sinatra', :require => nil
 gem 'whenever'
+gem 'redis-namespace'
 
 # Use jquery as the JavaScript library
 gem 'jquery-rails'
