--- a/web/Gemfile
+++ b/web/Gemfile
@@ -28,6 +28,7 @@ gem 'sidekiq'
 gem 'sinatra', :require => nil
 gem 'whenever'
 gem 'redis-namespace'
+gem "rolify"
 
 # Use jquery as the JavaScript library
 gem 'jquery-rails'
