--- a/web/Gemfile
+++ b/web/Gemfile
@@ -29,6 +29,7 @@ gem 'sinatra', :require => nil
 gem 'whenever'
 gem 'redis-namespace'
 gem "rolify"
+gem 'rest-client'
 
 # Use jquery as the JavaScript library
 gem 'jquery-rails'
