added the possibility to move pilots from one group to another

--- a/web/config/database.yml
+++ b/web/config/database.yml
@@ -4,7 +4,7 @@ development:
   pool: 5
   timeout: 5000
   username: root
-  password:
+  password: defaultpw
 
 production:
   adapter: mysql2
@@ -20,4 +20,4 @@ test:
   pool: 5
   timeout: 5000
   username: root
-  password:
+  password: defaultpw
