added possibility to merge lap times of a pilot

--- a/web/config/database.yml
+++ b/web/config/database.yml
@@ -4,8 +4,8 @@ development:
   pool: 5
   timeout: 5000
   username: root
-  password: defaultpw
-  socket: /var/run/mysqld/mysqld.sock
+  password: #defaultpw
+  #socket: /var/run/mysqld/mysqld.sock
 
 production:
   adapter: mysql2
