added support for the RaceBox (upcomming Raspbery PI OpenSource HAT) for easier connecting the PocketEdition and other VTX systems

--- a/ir_daemon2/package.json
+++ b/ir_daemon2/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "moment": "^2.14.1",
     "request": "^2.74.0",
+    "serialport": "^4.0.1",
     "wiring-pi": "^2.1.1"
   }
 }
