--- a/web/Gemfile
+++ b/web/Gemfile
@@ -2,8 +2,8 @@ source 'https://rubygems.org'
 
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
-gem 'rails', '4.2.4'
-gem 'sqlite3'
+gem 'rails', '4.2.11.3'
+gem 'sqlite3', '~> 1.3.6'
 # Use SCSS for stylesheets
 gem 'sass-rails', '~> 5.0'
 # Use Uglifier as compressor for JavaScript assets
@@ -29,6 +29,7 @@ gem 'sinatra', :require => nil
 gem 'whenever'
 gem 'redis-namespace'
 gem "rolify"
+gem 'bigdecimal', '1.3.5'
 
 # Use jquery as the JavaScript library
 gem 'jquery-rails'
